// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description should have a expanded sanpshot when funciton is invoke 1`] = `
<li
  onClick={[Function]}
>
  <p>
     
    Undertow
     
  </p>
  <div>
    <p>
      5.10a
    </p>
    <p>
       
      trad
      aid
      alpine
    </p>
    <p>
       
      https://www.mountainproject.com/route/106200712/undertow
    </p>
  </div>
</li>
`;

exports[`Description should have a non expanded snapshot 1`] = `
<li
  onClick={[Function]}
>
  <p>
     
    Undertow
     
  </p>
</li>
`;
